<resources>
    <string name="app_name">ReminderApp</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="alarm">Alarm</string>
    <string name="add_btn">+</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_alarm">Add alarm</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_click_here_to_register">New User, Click here to register</string>
    <string name="create_new_reminder">Create New Reminder</string>
    <string name="frequency_of_reminder">Frequency of reminder:</string>
    <string name="add_your_notes_here">Add your notes here..</string>
    <string name="selected_time">Selected time:</string>
    <string name="selected_date">Selected date:</string>
    <string name="notes">Notes</string>
    <string name="meeting">Meeting..</string>
    <string name="description">Description</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
