<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:background="#F4F4F4"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="18dp"
                    android:textSize="26sp"
                    android:textColor="#FFF"
                    android:text="@string/create_new_reminder"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
                <View
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:background="#131E69"
                    android:layout_height="1dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="-60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="22dp"
                android:background="@drawable/bg_item_todo"
                android:paddingTop="22dp">

                <LinearLayout
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/description"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <EditText
                        android:id="@+id/editTextMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:paddingStart="12dp"
                        android:textColorHint="#B5B5B5"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/meeting"
                        android:inputType="textShortMessage"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewSelectedDate"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/selected_date"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <Button
                        android:id="@+id/btnSelectDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/bg_btn_create"
                        android:textAllCaps="false"
                        android:textColor="#FFF"
                        android:textSize="22sp"
                        android:text="Choose Date"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/colorPrimaryDark"
                        android:id="@+id/textViewSelectedTime"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:text="@string/selected_time"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        />
                    <Button
                        android:textSize="22sp"
                        android:background="@drawable/bg_btn_create"
                        android:paddingStart="12dp"
                        android:textAllCaps="false"
                        android:textColor="#FFF"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="20dp"
                        android:id="@+id/btnSelectTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Choose Time" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/colorPrimaryDark"
                        android:id="@+id/textViewFrequencyLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/frequency_of_reminder"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        />

                    <Spinner
                        android:id="@+id/spinnerFrequencyOptions"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/notes"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        />
                    <EditText
                        android:id="@+id/editTextNotes"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/add_your_notes_here"
                        android:inputType="textMultiLine"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <Button
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:id="@+id/btnSaveReminder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFF"
                        android:textAllCaps="false"
                        android:background="@drawable/bg_btn_create"
                        android:textSize="22sp"
                        android:text="Create Now" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
